Bug 13376 - Buggy BCM - emachines E510
Summary: Buggy BCM - emachines E510
Status: CLOSED PATCH_ALREADY_AVAILABLE
Alias: None
Product: ACPI
Classification: Unclassified
Component: BIOS (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Zhang Rui
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-24 21:36 UTC by Tulio Magno Quites Machado Filho
Modified: 2009-06-01 19:53 UTC (History)
2 users (show)

See Also:
Kernel Version: 2.6.30-rc6
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
dmidecode output (11.32 KB, text/plain)
2009-05-24 21:37 UTC, Tulio Magno Quites Machado Filho
Details
acpidump output (320.14 KB, application/octet-stream)
2009-05-24 21:38 UTC, Tulio Magno Quites Machado Filho
Details
patch: dmi check for eMachines E510 (810 bytes, patch)
2009-05-25 03:11 UTC, Zhang Rui
Details | Diff
patch: dmi check for eMachines E510 (810 bytes, patch)
2009-05-26 02:15 UTC, Zhang Rui
Details | Diff

Description Tulio Magno Quites Machado Filho 2009-05-24 21:36:15 UTC
This seems the same problem as Bug 13121.

When pressing one of brighteness keys, I get this:
[76607.890373] ACPI: Failed to switch the brightness

I am sending the outputs of dmidecode and acpidump.
Comment 1 Tulio Magno Quites Machado Filho 2009-05-24 21:37:52 UTC
Created attachment 21521 [details]
dmidecode output
Comment 2 Tulio Magno Quites Machado Filho 2009-05-24 21:38:29 UTC
Created attachment 21522 [details]
acpidump output
Comment 3 Zhang Rui 2009-05-25 03:11:30 UTC
Created attachment 21524 [details]
patch: dmi check for eMachines E510

please try this patch and see if it helps.
Comment 4 Tulio Magno Quites Machado Filho 2009-05-25 07:13:07 UTC
It does not work.

And I've got this from dmesg when starting the system:
[   37.571501] ACPI Error (video-0537): Current brightness invalid [20090320]

And this when pressing the keys:
[   84.964319] ACPI: Failed to switch the brightness
Comment 5 Zhang Rui 2009-05-26 02:15:33 UTC
Created attachment 21554 [details]
patch: dmi check for eMachines E510
Comment 6 Tulio Magno Quites Machado Filho 2009-05-26 11:55:09 UTC
It works now.
Thanks!
Comment 7 Len Brown 2009-05-27 03:35:54 UTC
patch in comment #5 applied to acpi tree
Comment 8 Len Brown 2009-06-01 19:53:42 UTC
34ac272b3aaef11a91e19a72f3ac5772a96ffbc5
ACPI: video: DMI workaround broken eMachines E510 BIOS enabling display brightness

shipped after linux-2.6.30-rc7-git4, so it should be present in -rc8

closed.

Note You need to log in before you can comment on or make changes to this bug.